# HtmlGrapheasKamva_old

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle
cmake/: build_agg.cmake  build_dirent.cmake  build_expat.cmake  build_fontconfig.cmake  build_freetype_with_harfbuzz.cmake  build_googletest.cmake  build_stlcache.cmake
cmake/libcmaker/: build_agg.cmake  build_dirent.cmake  build_expat.cmake  build_fontconfig.cmake  build_freetype_with_harfbuzz.cmake  build_googletest.cmake  build_icu.cmake  build_icu_host_tools.cmake  build_stlcache.cmake  build_wxwidgets.cmake
host_tools/: CMakeLists.txt
platform/android/androidTest/java/ru/htmlgrapheas/htmlgrapheaskamva/: ExampleInstrumentedTest.java
platform/android/main/: AndroidManifest.xml
platform/android/main/cpp/: CMakeLists.txt
platform/android/main/cpp/src/hgkamva/platform/android/: HgKamvaApiJni.cpp
platform/android/main/java/ru/htmlgrapheas/htmlgrapheaskamva/: DrawOnBitmapLoader.java  HtmlGrapheasView.java
platform/android/main/java/ru/htmlgrapheas/htmlgrapheaskamva/hgkamva_api/: HgKamvaApiJni.java
platform/android/main/java/ru/htmlgrapheas/htmlgrapheaskamva/hgkamva_api/codes/: hgLitehtmlMediaType.java  hgPixelFormatId.java
platform/android/main/res/values/: strings.xml
platform/android/test/java/ru/htmlgrapheas/htmlgrapheaskamva/: ExampleUnitTest.java
platform/wxwidgets/: CMakeLists.txt
platform/wxwidgets/src/hgkamva/platform/wxwidgets/: HgKamvaWxWindow.cpp  HgKamvaWxWindow.h  wxPixelFormatToHgHtmlRenderer.h
src/hgkamva/: hg_kamva_api.cpp  hg_kamva_api.h  hg_kamva_codes.h  hg_kamva_common.h
src/hgkamva/container/: HgAggPainter.h  HgAggPainter_test.cpp  HgContainer.cpp  HgContainer.h  HgContainer_test.cpp  HgFont.cpp  HgFont.h  HgFontLibrary.cpp  HgFontLibrary.h  HgFontLibrary_test.cpp  HgFont_test.cpp  HgPainter.h
src/hgkamva/renderer/: HgAggHtmlRenderer.h  HgAggHtmlRenderer_test.cpp  HgHtmlRenderer.cpp  HgHtmlRenderer.h
src/hgkamva/util/: FileUtil.cpp  FileUtil.h  StringUtil.cpp  StringUtil.h  StringUtil_test.cpp
test/: CMakeLists.txt
test/data/: HgContainer_1.ppm  HgContainer_2.ppm  HgFontTest_1.ppm  HgFontTest_2.ppm  HtmlDocument_1.ppm  master.css  test.html
test/data/MinGW/: HgContainer_1.ppm  HgContainer_2.ppm  HgFontTest_1.ppm  HgFontTest_2.ppm  HtmlDocument_1.ppm
